GNOME Bugzilla – Bug 775636
"New folder" creation popover warnings about trailing spaces flashes in an annoying way
Last modified: 2017-07-18 19:12:03 UTC
Created attachment 341398 [details] screencast See the attached screencast... the filechooser should either not care about these things, or it should size the popover 2-3 times larger, in a way that this text would stop resizing it everytime I type a new word in my folder names (this would have the advantage that I could also see what I'm typing whenever I have a long folder name)
Created attachment 344920 [details] [review] filechooserwidget: Let the rename entry hexpand This makes a difference with other locals where error messages are longer than the standard width of entry+spacing+button.
Created attachment 344921 [details] [review] filechooserwidget: Add GtkFileChooserErrorStack Showing all the different errors and warnings when renaming and creating files/folders without potentially resizing popovers on every keystroke requires us to know the size of the error messages beforehand, so pack all of the possible error messages and warnings in labels and those into a stack. This way we can also neatly crossfade transition between them.
Review of attachment 344920 [details] [review]: ok
Review of attachment 344921 [details] [review]: quite a bit of work! thanks
Created attachment 351408 [details] [review] filechooserwidget: Add GtkFileChooserErrorStack
Attachment 344920 [details] pushed as 20d47e2 - filechooserwidget: Let the rename entry hexpand Attachment 351408 [details] pushed as 3505e0d - filechooserwidget: Add GtkFileChooserErrorStack